name:                icet-vcgen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/icet-vcgen#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -O2 
                       -Werror 
                       -fwarn-tabs -fwarn-unused-imports  -fwarn-incomplete-uni-patterns -fwarn-incomplete-patterns -fwarn-overlapping-patterns -fwarn-incomplete-record-updates -fdefer-type-errors -fwarn-orphans -fforce-recomp -fno-code -fobject-code
                       -- -fwarn-name-shadowing -fwarn-missing-signatures -fwarn-monomorphism-restriction 
  hs-source-dirs:      src
  exposed-modules:     Language.IceT.Types
                     , Language.IceT.VCGen
                     , Language.IceT.Parse
                     , Language.IceT.SMT
                     , Language.IceT.Pretty
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , pretty
                     , parsec
                     , process
                     , containers
  default-language:    Haskell2010

executable briskly
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
                       -Werror 
                       -fwarn-tabs -fwarn-unused-imports  -fwarn-incomplete-uni-patterns -fwarn-incomplete-patterns -fwarn-overlapping-patterns -fwarn-incomplete-record-updates -fdefer-type-errors -fwarn-orphans -fforce-recomp -fno-code -fobject-code
                       -- -fwarn-name-shadowing -fwarn-missing-signatures -fwarn-monomorphism-restriction 
  build-depends:       base
                     , icet-vcgen
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/icet-vcgen
